--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
     "type": "git",
     "url": "git://github.com/cshanejennings/iframe-external-interface.git"
   },
+  "main": "src/index",
   "engines": {
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "grunt-browserify": "^3.2.1"
+    "dispatch-token": "git://github.com/cshanejennings/dispatcher-token.git"
   },
   "devDependencies": {
+    "chai": "~1.9.0",
     "grunt": "~0.4.5",
+    "grunt-browserify": "^3.2.1",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-watch": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-connect": "~0.6.0",
     "grunt-mocha-phantomjs": "~0.4.0",
     "grunt-mocha-test": "~0.9.0",
+    "grunt-node-inspector": "^0.1.5",
     "matchdep": "~0.3.0",
     "mocha": "~1.17.1",
-    "chai": "~1.9.0",
     "sinon": "~1.8.1",
     "sinon-chai": "~2.5.0"
   }
